--- a/frontend/src/Components/DescriptionBox/DescriptionBox.css
+++ b/frontend/src/Components/DescriptionBox/DescriptionBox.css
@@ -1,8 +1,10 @@
 .descriptionbox{
     margin: 120px 170px;
+    border-radius: 3px;
 }
-.descriptionbox-navigator{
+.descriptionbox-navigators{
     display: flex;
+    border-radius: 4px;
 }
 .descriptionbox-nav-box{
     display: flex;
@@ -13,6 +15,7 @@
     width: 171px;
     height: 70px;
     border: 1px solid #d0d0d0;
+    
 }
 .descriptionbox-nav-box.fade{
     background: #FBFBFB;
