--- a/frontend/src/Components/Footer/Footer.css
+++ b/frontend/src/Components/Footer/Footer.css
@@ -28,6 +28,8 @@
     color: #252525;
     font-size: 16px;
 }
+
+
 .footer-links li{
     cursor: pointer;
 }
@@ -40,6 +42,7 @@
     padding-bottom: 6px;
     background: #fbfbfb;
     border: 1px solid #ebebeb;
+    border-radius: 24px;
 }
 .footer-icons-container img{
     width: 25px;
