--- a/frontend/src/Components/Item/Item.css
+++ b/frontend/src/Components/Item/Item.css
@@ -3,6 +3,8 @@
 }
 .item img{
     width: 100%;
+    border-radius: 10px;
+    height: auto;
 }
 .item p{
     margin: 6px 0px;
@@ -25,6 +27,7 @@
 .item:hover{
     transform: scale(1.05);
     transition: 0.6s;
+    
 }
 
 
