--- a/frontend/src/Components/NewsLetter/NewsLetter.css
+++ b/frontend/src/Components/NewsLetter/NewsLetter.css
@@ -9,12 +9,13 @@
     margin: auto;
     padding: 50px 8%;
     margin-bottom: 100px;
-    background: linear-gradient(180deg, #fde1ff 0%, #e1ffea22 60%);
+    background: linear-gradient(180deg, #e385ea 0%, #e1ffea22 60%);
     gap: 20px;
+    border-radius: 10px;
 }
 
 .newsletter h1{
-    color: #454545;
+    color: #181616;
     font-size: 45px;
     font-weight: 600;
 }
@@ -34,6 +35,7 @@
     height: 60px;
     border-radius: 80px;
     border: 1px solid #e3e3e3;
+    border-color: black;
 }
 
 .newsletter input{
@@ -54,6 +56,11 @@
     color: white;
     font-size: 16px;
     cursor: pointer;
+}
+.newsletter div button:hover{
+    background-color:coral;
+    border-color: #454545;
+    color: white;
 }
 
 /* ----------- media query--------- */
