--- a/frontend/src/Pages/About/About.css
+++ b/frontend/src/Pages/About/About.css
@@ -14,3 +14,18 @@
   margin-bottom: 10px;
   color: #333;
 }
+h3{
+  text-align: left;
+}
+h4{
+  text-align: left;
+  margin: 4px;
+}
+p{
+  text-align: left;
+  margin: 2px;
+  margin-top: 3px;
+}
+h1{
+  margin: 20vh;
+}
